[project]
name = "exaqc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12, <3.13"
keywords = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "black",
    "flake8",
    "qiskit-aer",
    "qiskit",
    "pennylane",
    "pennylane-qiskit",
    "torch",
    "matplotlib",
    "pytest",
    "loguru",
    "pylatexenc",
    "scikit-learn",
]
