[project]
name = "exaqc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11, <3.13"
keywords = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "black",
    "flake8",
    "numpy<2",
    "qiskit-aer",
    "qiskit",
    "pennylane",
    "pennylane-qiskit",
    "torch",
    "matplotlib",
    "seaborn",
    "pytest",
    "loguru",
    "pylatexenc",
    "scikit-learn",
    "mpi4py",
    "gymnasium",
    "gymnasium[mujoco]",
    "minigrid",
]
